# cxx_lab

./: .gitignore  CMakeLists.txt  README.md
docker/: README.md  compose.yml  gcc12.docker  gcc12.make
docs/coroutine/: asio_schedule_handler.md  async_blocking_api_with_ioctx.md  async_blocking_api_with_pool.md  spawn_and_compose_coroutine.md
docs/function_objects/: sigslot_explain.md
docs/multithread/: boost_lockfree_explain.md  stdcxx_cond_variable_classes.md  stdcxx_lock_classes.md  stdcxx_mutex_classes.md  stdcxx_synchronization_intro.md
docs/network/: design_ssl_server_client.md  generate_ssl_key_pair.md
docs/nosql/: redis_boost_intro.md  redis_cpp_intro.md
src/: CMakeLists.txt
src/apps/thread/: CMakeLists.txt
src/apps/thread/sensor_monitor/: CMakeLists.txt  README.md  main_app.cpp  sensor.hpp  sensor_manager.hpp
src/demo/: CMakeLists.txt
src/demo/asio/: CMakeLists.txt
src/demo/asio/coroutine/: CMakeLists.txt  README.md  async_blocking_api_with_ioctx.cpp  async_blocking_api_with_pool.cpp  demo_compose_coroutine.cpp  demo_spawn_coroutine.cpp
src/demo/asio/io_ctx/: CMakeLists.txt  README.md  ioctx_control_service.cpp  ioctx_notify_fork.cpp  ioctx_running_task.cpp
src/demo/asio/socket/: CMakeLists.txt  README.md  beast_ws_ssl_client.cpp  socket_read_write.cpp  socket_ssl_client.cpp  socket_ssl_server.cpp  socket_tcp_client.cpp  socket_tcp_server.cpp  uws_ws_ssl_server.cpp
src/demo/asio/thread/: CMakeLists.txt  README.md  thread_group_with_ioctx.cpp  thread_pool_with_ioctx.cpp
src/demo/asio/timer/: CMakeLists.txt  README.md  demo_timer_manager.cpp  timer_control.cpp
src/demo/container/: CMakeLists.txt
src/demo/container/lock_free/: CMakeLists.txt  README.md  demo_lockfree_queue.cpp  demo_lockfree_spsc_queue.cpp
src/demo/container/lock_mutex/: CMakeLists.txt  README.md  demo_safe_bounded_queue.cpp  demo_safe_circular_queue.cpp  demo_safe_deque.cpp  demo_safe_map.cpp  demo_safe_multimap.cpp  demo_safe_set.cpp
src/demo/grpc/: CMakeLists.txt
src/demo/grpc/bidirect_stream_rpc/: CMakeLists.txt  README.md  grpc_bs_client.cpp  grpc_bs_server.cpp
src/demo/grpc/bidirect_stream_rpc/proto/: chat.proto
src/demo/grpc/client_stream_rpc/: CMakeLists.txt  README.md  grpc_cs_client.cpp  grpc_cs_server.cpp
src/demo/grpc/client_stream_rpc/proto/: sum.proto
src/demo/grpc/server_stream_rpc/: CMakeLists.txt  README.md  grpc_ss_client.cpp  grpc_ss_server.cpp
src/demo/grpc/server_stream_rpc/proto/: streaming.proto
src/demo/grpc/unary_rpc/: CMakeLists.txt  README.md  grpc_unary_client.cpp  grpc_unary_server.cpp
src/demo/grpc/unary_rpc/proto/: hello.proto
src/demo/msg_queue/: CMakeLists.txt
src/demo/msg_queue/amqp_cpp/: CMakeLists.txt  README.md  amqpcpp_pubsub_publisher.cpp  amqpcpp_pubsub_subscriber.cpp  amqpcpp_queue_client.cpp  amqpcpp_queue_server.cpp  demo_async_amqp_channel.cpp  demo_async_amqp_exchange.cpp  demo_async_amqp_get_ack.cpp  demo_async_amqp_queue.cpp  demo_async_amqp_transaction.cpp
src/demo/nosql/: CMakeLists.txt
src/demo/nosql/mongodb/: CMakeLists.txt  README.md  demo_mongocxx_async.cpp  demo_mongocxx_client.cpp  mongocxx_client.hpp
src/demo/nosql/redis/: CMakeLists.txt  README.md  demo_redis_cpp_async.cpp  demo_redis_cpp_client.cpp  demo_redis_without_ssl.cpp  redis_cpp_client.hpp
src/demo/rdbms/: CMakeLists.txt
src/demo/rdbms/mysql/: CMakeLists.txt  README.md  demo_mysql_with_ssl.cpp  demo_mysql_without_ssl.cpp
src/demo/rdbms/pgsql/: CMakeLists.txt  README.md  demo_pgsql_async.cpp  demo_pgsql_with_ssl.cpp  demo_pgsql_without_ssl.cpp
src/demo/signal_slot/: CMakeLists.txt  README.md  demo_signal2_connections.cpp  demo_signal2_custom_combiner.cpp  demo_signal2_document_view.cpp  demo_signal2_multithreaded.cpp  demo_sigslot_mt.cpp  demo_sigslot_st.cpp
src/demo/smart_pointer/: CMakeLists.txt  README.md  demo_shared_from_this.cpp  demo_shared_ptr.cpp  demo_unique_ptr.cpp  demo_weak_ptr.cpp
src/demo/utils/: CMakeLists.txt  demo_fmt_string.cpp  demo_spd_logger.cpp
src/modules/asio/: amqpcpp_async_channel.hpp  amqpcpp_async_channel.inl  timer_manager.hpp
src/modules/container/: safe_bounded_queue.hpp  safe_circular_queue.hpp  safe_map.hpp
src/modules/thread/: safe_deque.hpp  safe_map.hpp  safe_multimap.hpp  safe_set.hpp
src/modules/utils/: logger.hpp
src/tests/: CMakeLists.txt
src/tests/asio/: CMakeLists.txt  test_timer_manager.cpp
src/tests/container/: CMakeLists.txt  test_safe_bounded_queue.cpp  test_safe_circular_queue.cpp  test_safe_deque.cpp  test_safe_map.cpp  test_safe_multimap.cpp  test_safe_set.cpp
