
add_executable(demo_unique_ptr demo_unique_ptr.cpp)
add_executable(demo_shared_ptr demo_shared_ptr.cpp)
add_executable(demo_weak_ptr demo_weak_ptr.cpp)
add_executable(demo_shared_from_this demo_shared_from_this.cpp)

# You can link any required libraries here if needed, e.g.:
# target_link_libraries(demo_shared_ptr <LIBRARY_NAME>)
# target_link_libraries(demo_weak_ptr <LIBRARY_NAME>)
