add_executable(test_safe_deque test_safe_deque.cpp)

add_executable(test_safe_circular_queue test_safe_circular_queue.cpp)

add_executable(test_safe_map test_safe_map.cpp)

add_executable(test_safe_multimap test_safe_multimap.cpp)

add_executable(test_safe_set test_safe_set.cpp)

add_executable(test_safe_bounded_queue test_safe_bounded_queue.cpp)


