add_executable(demo_safe_deque demo_safe_deque.cpp)

add_executable(demo_safe_circular_queue demo_safe_circular_queue.cpp)

add_executable(demo_safe_map demo_safe_map.cpp)

add_executable(demo_safe_multimap demo_safe_multimap.cpp)

add_executable(demo_safe_set demo_safe_set.cpp)

add_executable(demo_safe_bounded_queue demo_safe_bounded_queue.cpp)

